他人的个人主页

--- a/Aier360/Resources/help/app_login.html
+++ b/Aier360/Resources/help/app_login.html
@@ -72,42 +72,42 @@
 			if (cur == 6) {
 				document.getElementById("ltitle").innerHTML="6.多个身份时如何切换身份？";
 				document.getElementById("lcontent").innerHTML = "<ul><li><span style='color:#40920A;'>方法一:</span>"+
-						"<br/><img style='width:240px;' src='../img/v2/static/i/app/lg1.png'/></li>"+
-				"<li><span style='color:#40920A;'>方法二:</span><br/><img style='width:240px;' src='../img/v2/static/i/app/lg2.png'/></li>"+
+						"<br/><img style='width:240px;' src='lg1.png'/></li>"+
+				"<li><span style='color:#40920A;'>方法二:</span><br/><img style='width:240px;' src='lg2.png'/></li>"+
 				"</ul>";
 			}
 			if (cur == 7) {
 				document.getElementById("ltitle").innerHTML="1.自己注册的用户如何加入学校/班级？";
 				document.getElementById("lcontent").innerHTML = "<ul><li><span style=''>登录后点击“加入学校”:</span>"+
-						"<br/><img style='width:240px;' src='../img/v2/static/i/app/j1.png'/></li>"+
-				"<li><span style=''>选择学校所在区域，搜索学校:</span><br/><img style='width:240px;' src='../img/v2/static/i/app/j2.png'/></li>"+
-				"<li><span style=''>点击加入学校按钮:</span><br/><img style='width:240px;' src='../img/v2/static/i/app/j3.png'/></li>"+
-				"<li><span style=''>选择身份加入学校:</span><br/><img style='width:240px;' src='../img/v2/static/i/app/j4.png'/></li>"+
+						"<br/><img style='width:240px;' src='j1.png'/></li>"+
+				"<li><span style=''>选择学校所在区域，搜索学校:</span><br/><img style='width:240px;' src='j2.png'/></li>"+
+				"<li><span style=''>点击加入学校按钮:</span><br/><img style='width:240px;' src='j3.png'/></li>"+
+				"<li><span style=''>选择身份加入学校:</span><br/><img style='width:240px;' src='j4.png'/></li>"+
 				"<li><span style=''>根据相应的内容填写资料,点击完成提交申请，然后"+
-				"等待学校的审核结果:</span><br/><img style='width:240px;' src='../img/v2/static/i/app/j5.png'/></li>"+
+				"等待学校的审核结果:</span><br/><img style='width:240px;' src='j5.png'/></li>"+
 				"</ul>";
 			}
 			if (cur == 8) {
 				document.getElementById("ltitle").innerHTML="2.学校注册的用户如何再次加入学校/班级？";
 				document.getElementById("lcontent").innerHTML = "<ul><li><span style=''>用短信提示的账号和密码登录爱儿邦后，第一栏会出"+
 						"现自己学校的名称，若想再次以其他身份加入该学校需点击进入该学校主页:</span>"+
-						"<br/><img style='width:240px;' src='../img/v2/static/i/app/jj1.png'/></li>"+
-						"<li><span style=''>点击更多按钮图标:</span><br/><img style='width:240px;' src='../img/v2/static/i/app/jj2.png'/></li>"+
-						"<li><span style=''>点击加入学校，完成相应的内容提交，等待审核:</span><br/><img style='width:240px;' src='../img/v2/static/i/app/jj3.png'/></li>"+
+						"<br/><img style='width:240px;' src='jj1.png'/></li>"+
+						"<li><span style=''>点击更多按钮图标:</span><br/><img style='width:240px;' src='jj2.png'/></li>"+
+						"<li><span style=''>点击加入学校，完成相应的内容提交，等待审核:</span><br/><img style='width:240px;' src='jj3.png'/></li>"+
 						"<li><span style=''>若想加入其他的学校，则点击校园版块右上角的更多"+
-						"按钮:</span><br/><img style='width:240px;' src='../img/v2/static/i/app/jj4.png'/></li>"+
-						"<li><span style=''>点击“加入学校” :</span><br/><img style='width:240px;' src='../img/v2/static/i/app/jj5.png'/></li>"+
+						"按钮:</span><br/><img style='width:240px;' src='jj4.png'/></li>"+
+						"<li><span style=''>点击“加入学校” :</span><br/><img style='width:240px;' src='jj5.png'/></li>"+
 				"</ul>";
 			}
 			if (cur == 9) {
 				document.getElementById("ltitle").innerHTML="1.如何挂失IC卡？家长也可以挂失吗？";
 				document.getElementById("lcontent").innerHTML = "<ul><li><span style='color:#40920A;'>方法一:</span>"+
-						"<br/><span style=''>IC卡丢失后，失主可以上报到学校，让IC卡管理员将其挂失</span><br/><img style='width:240px;' src='../img/v2/static/i/app/i1.png'/></li>"+
+						"<br/><span style=''>IC卡丢失后，失主可以上报到学校，让IC卡管理员将其挂失</span><br/><img style='width:240px;' src='i1.png'/></li>"+
 						"<li><span style='color:#40920A;'>方法二</span><br/><span>失主也可自行挂失：</span><br/><span>(1)登录手机客户端点击“我的IC卡”，选择要挂失的"+
-						"IC卡 </span><br/><img style='width:240px;' src='../img/v2/static/i/app/i2.png'/></li>"+
-						"<li><span style=''>(2)点击挂失</span><br/><img style='width:240px;' src='../img/v2/static/i/app/i3.png'/></li>"+
+						"IC卡 </span><br/><img style='width:240px;' src='i2.png'/></li>"+
+						"<li><span style=''>(2)点击挂失</span><br/><img style='width:240px;' src='i3.png'/></li>"+
 						"<li><span style=''>点击“确定”，挂失成功"+
-						"</span><br/><img style='width:240px;' src='../img/v2/static/i/app/i4.png'/></li>"+					
+						"</span><br/><img style='width:240px;' src='i4.png'/></li>"+					
 				"</ul>";
 			}
 			if (cur == 0) {
